objects/SVMXC__Service_Contract_Products__c.object
<CustomObject>
    <description>Installed products, part numbers, or groups of products entitled by this service contract.</description>
    <fields>
        <fullName>Active__c</fullName>
        <description>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</description>
        <formula>SVMXC__Service_Contract__r.SVMXC__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Covered Products</relationshipLabel>
        <relationshipName>Covered_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BackOfficeReference__c</fullName>
        <label>Back Office Reference #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>AssetLocation__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Free text that shows any exceptions or conditions that apply when entitling the customer based on this contract. Information entered here is displayed on the Case Entitlement when this contract is used.</description>
        <formula>SVMXC__Service_Contract__r.SKUComRefDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Define exceptions or conditions that apply when entitling the customer based on this contract. Information entered here is displayed on the Case Entitlement when this contract is used.</inlineHelpText>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golden_Asset_Id__c</fullName>
        <formula>SVMXC__Installed_Product__r.GoldenAssetId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GoldenAssetId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPUnderContract__c</fullName>
        <description>Captures Under Contract flag from Installed Product.</description>
        <formula>SVMXC__Installed_Product__r.UnderContract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPUnderContract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludedServiceFeatureName__c</fullName>
        <formula>IncludedService__r.SVMXC__Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Included Service Feature Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludedService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Included Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SVMXC__Service_Contract_Services__c.SVMXC__Service_Contract__c</field>
                <operation>equals</operation>
                <valueField>$Source.SVMXC__Service_Contract__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__Service_Contract_Services__c</referenceTo>
        <relationshipLabel>Covered Products</relationshipLabel>
        <relationshipName>Covered_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InstallAt__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed At</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstalledAtAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed At Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Covered Installed Product</relationshipLabel>
        <relationshipName>Covered_Installed_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InstalledAtGoldenID__c</fullName>
        <label>InstalledAtGoldenID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstalledAtName__c</fullName>
        <label>InstalledAtName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstalledProductLocation__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDUIpbFOID__c</fullName>
        <label>PDUIpbFOID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentServiceContract__c</fullName>
        <formula>HYPERLINK(SVMXC__Service_Contract__r.ParentContract__c,SVMXC__Service_Contract__r.ParentContract__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Service/Maintenance Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSKU__c</fullName>
        <formula>SVMXC__Product__r.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_SKU_Com_RefCom_Ref__c</fullName>
        <formula>SVMXC__Service_Contract__r.SKUComRef__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU/Com. Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date__c</fullName>
        <description>End date of service contract/warranty at the time of entitlement</description>
        <inlineHelpText>End date of service contract/warranty at the time of entitlement</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Exchange_Type__c</fullName>
        <description>Type of exchange allowed as per the service contract line. This overrides the exchange type set in the Service Contract</description>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the installed product covered by the service contract. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Name of the installed product covered by the service contract. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzdkEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Price__c</fullName>
        <label>Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Notes__c</fullName>
        <description>Additional information about entitlement by this product/group of products.</description>
        <inlineHelpText>Additional information about entitlement by this product/group of products.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_PMs_Delivered__c</fullName>
        <description>Number of preventive maintenance work orders completed for this product so far. Calculated automatically when PM work orders are closed</description>
        <label>Number Of PMs Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Family__c</fullName>
        <description>Product Family covered by this service contract.</description>
        <inlineHelpText>Product Family covered by this service contract.</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Latitude</fullName>
                </value>
                <value>
                    <fullName>OptiPlex</fullName>
                </value>
                <value>
                    <fullName>PowerConnect</fullName>
                </value>
                <value>
                    <fullName>PowerEdge</fullName>
                </value>
                <value>
                    <fullName>PowerVault</fullName>
                </value>
                <value>
                    <fullName>Precision</fullName>
                </value>
                <value>
                    <fullName>Vostro</fullName>
                </value>
                <value>
                    <fullName>XPS</fullName>
                </value>
                <value>
                    <fullName>Antivirus</fullName>
                </value>
                <value>
                    <fullName>Recovery</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>Operating System</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <description>Product Line covered by this service contract.</description>
        <inlineHelpText>Product Line covered by this service contract.</inlineHelpText>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product covered by the service contract. Is a lookup to an existing salesforce product record</description>
        <inlineHelpText>Name of the product covered by the service contract. Is a lookup to an existing salesforce product record</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N70000001hzcyEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</description>
        <inlineHelpText>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipName>Covered_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <description>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</description>
        <inlineHelpText>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</inlineHelpText>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>R00N70000001hzdaEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date__c</fullName>
        <description>Start date of service contract/warranty at the time of entitlement</description>
        <inlineHelpText>Start date of service contract/warranty at the time of entitlement</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_PM_visit__c</fullName>
        <label>Schedule PM Visit</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_LotNumber__c</fullName>
        <description>Exposed to customer - Covered Prodcut serial number update</description>
        <formula>SVMXC__Installed_Product__r.SVMXC__Serial_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial/LotNumber *</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Serial_Lot_Number__c</formula>
        <inlineHelpText>Exposed to customer</inlineHelpText>
        <label>Serial Number *</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedSerialNumber__c</fullName>
        <description>Serial Number of the shipped asset for concurrent order</description>
        <label>Shipped Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_InstalledProductWarrantyEndDate__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Warranty_End_Date__c</formula>
        <label>TECH_InstalledProductWarrantyEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_InstalledProductWarrantyStartDate__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Warranty_Start_Date__c</formula>
        <label>TECH_InstalledProductWarrantyStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_isAddressSynchedWithAccount_c__c</fullName>
        <formula>AND( installedAtStreet__c = InstalledAtAccount__r.Street__c , installedAtCity__c = InstalledAtAccount__r.City__c, installedAtStateProvinceCode__c = InstalledAtAccount__r.StateProvince__c,  installedAtZipCode__c = InstalledAtAccount__r.ZipCode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_isAddressSynchedWithAccount__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_CreatedThroughSFM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_CreatedThroughSFM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_SetOfId__c</fullName>
        <formula>SVMXC__Service_Contract__r.Id&amp;&quot;-&quot;&amp;IncludedService__r.Id&amp;&quot;-&quot;&amp; SVMXC__Installed_Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_SetOfId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueCPId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueCPId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>installedAtAddAddressInfoLocal__c</fullName>
        <label>installedAtAddAddressInfoLocal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtAddAddressInfo__c</fullName>
        <label>installedAtAddAddressInfo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtCity__c</fullName>
        <label>installedAtCity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtCountryCode__c</fullName>
        <label>installedAtCountryCode</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtLocalCity__c</fullName>
        <label>installedAtLocalCity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtNameLocal__c</fullName>
        <label>installedAtNameLocal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtStateProvinceCode__c</fullName>
        <label>installedAtStateProvinceCode</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtStreetLocal__c</fullName>
        <label>installedAtStreetLocal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtStreet__c</fullName>
        <label>installedAtStreet</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installedAtZipCode__c</fullName>
        <label>installedAtZipCode</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Covered Product</label>
    <nameField>
        <displayFormat>SCPN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covered Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Included_Service_part_of_contract</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c),NOT(ISBLANK(IncludedService__c)), IncludedService__r.SVMXC__Service_Contract__c !=  SVMXC__Service_Contract__c)</errorConditionFormula>
        <errorDisplayField>IncludedService__c</errorDisplayField>
        <errorMessage>&apos;Included Service&apos; must be associated to this contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMCVR01APR2015CoveredProductdateCheck</fullName>
        <active>true</active>
        <description>This Validation Rule will Check the Covered Products Start Date and End Date Falls within the Service Line Start Date and End Date</description>
        <errorConditionFormula>AND(
		NOT($User.BypassVR__c),
		OR(
			((SVMXC__Start_Date__c &lt; SVMXC__Service_Contract__r.SVMXC__Start_Date__c ) || (SVMXC__Start_Date__c&gt;SVMXC__Service_Contract__r.SVMXC__End_Date__c )) ||
			((SVMXC__End_Date__c &gt; SVMXC__Service_Contract__r.SVMXC__End_Date__c ) || (SVMXC__End_Date__c &lt;SVMXC__Service_Contract__r.SVMXC__Start_Date__c))
		  )
    )</errorConditionFormula>
        <errorMessage>Start date &amp; End date of the Covered product must be included within the Start date &amp; End date of the Service line</errorMessage>
    </validationRules>
</CustomObject>